--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
     "json-server": "^1.0.0-beta.2",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
